--- a/miniprogram/components/prompts-input-image/index.wxss
+++ b/miniprogram/components/prompts-input-image/index.wxss
@@ -59,6 +59,30 @@
   text-align: center;
 }
 
+.choose_upload_item_bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  font-size: 60rpx;
+  line-height: 140rpx;
+  text-align: center;
+}
+
+.choose_upload_item.uploading .choose_upload_item_bg {
+  background-color: #787878;
+  opacity: 0.8;
+}
+
+.choose_upload_item.success .choose_upload_item_bg {
+  display: none;
+}
+
+.choose_upload_item.error .choose_upload_item_bg {
+  background-color: #787878;
+  opacity: 0.8;
+}
+
 .item-right {
   width: 220rpx;
   height: 160rpx;
