--- a/miniprogram/pkg_mine/components/settings/index.wxml
+++ b/miniprogram/pkg_mine/components/settings/index.wxml
@@ -1,13 +1,12 @@
 <!--pkg_mine/components/settings/index.wxml-->
 <view class="mine-list">
-  <!-- <view class="mine-item">
+  <view class="mine-item">
     <view class="mine-item-icon">
       <view class="icon iconf icon-facerenlianshibie"></view>
     </view>
-    <view class="mine-item-title">AI大脑切换</view>
-    <view class="mine-item-button" bindtap="onAIChange">切换</view>
-  </view> -->
-
+    <view class="mine-item-title">积分记录</view>
+    <view class="mine-item-button" bindtap="onRewardLogsTap">查看</view>
+  </view>
   <view class="mine-item">
     <view class="mine-item-icon">
       <view class="icon iconf icon-shanchu"></view>
@@ -33,6 +32,6 @@
     <view class="mine-item-icon">
       <view class="icon iconf icon-baopin"></view>
     </view>
-    <view class="mine-item-title">软件版本:1.0.16</view>
+    <view class="mine-item-title">软件版本:0.3.21</view>
   </view>
 </view>
