--- a/miniprogram/pkg_mine/pages/index/index.wxml
+++ b/miniprogram/pkg_mine/pages/index/index.wxml
@@ -23,7 +23,7 @@
       </view>
     </view>
     <view class="user-card-buttons">
-      <text-button class="checkin" text="签到" bgcolor="#FCAE38" bindtap="onCheckinTap"></text-button>
+      <text-button class="checkin {{checkin?'checkined':''}}" text="签到" bgcolor="{{checkin?'#7b7b7b':'#FCAE38'}}" bindtap="{{checkin?'':'onCheckinTap'}}"></text-button>
     </view>
   </view>
   <points-card bind:adtap="onRewardedVideoAdTap"></points-card>
@@ -46,3 +46,10 @@
   </view>
 </view>
 <tab-bar idx="3"></tab-bar>
+<view wx:if="{{showReward}}" class="loading-container" bindtap="onHideRewardTap">
+  <view class="loading-container-bg"></view>
+  <view class="center">
+    <view class="loading-title">签到成功</view>
+    <view class="loading-icon">+5</view>
+  </view>
+</view>
