--- a/miniprogram/pkg_mine/pages/index/index.wxss
+++ b/miniprogram/pkg_mine/pages/index/index.wxss
@@ -102,3 +102,51 @@
 }
 
 .vip-label {}
+
+.checkin {}
+
+.checkin.checkined {}
+
+.loading-container {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading-container-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #787878;
+  opacity: 0.8;
+  z-index: 10;
+}
+
+.loading-container .center {
+  background-color: #FFFFFF;
+  z-index: 11;
+  width: 300rpx;
+  height: 300rpx;
+  border-radius: 30rpx;
+  text-align: center;
+}
+
+.loading-container .loading-icon {
+  font-size: 120rpx;
+  color: #FCAE38;
+  font-weight: 600;
+  line-height: 140rpx;
+}
+
+.loading-container .loading-title {
+  color: #000000;
+  line-height: 80rpx;
+}
