--- a/miniprogram/components/msgs/message-actions-bar/index.wxml
+++ b/miniprogram/components/msgs/message-actions-bar/index.wxml
@@ -1,22 +1,29 @@
 <!--components/msgs/message-actions-bar/index.wxml-->
 <view class='actions-bar'>
-  <view class='actions-bar-button' wx:if="{{itemIndex > 0}}">
-    <button plain="true" bindtap="onPublish" data-prompt="{{newslist[itemIndex-1].text}}" data-examples="{{item.text}}">
-      发布
+  <block wx:if="{{responseitem.type=='replicate'}}">
+    <view class='actions-bar-button' wx:if="{{responseitem.result && responseitem.result == 2}}">
+      <button plain="true" bindtap="onPublish" data-prompt="{{requestitem.text}}" data-examples="{{responseitem.text}}">
+        发布
+      </button>
+    </view>
+  </block>
+  <block wx:else="{{responseitem.type=='replicate'}}">
+    <view class='actions-bar-button' wx:if="{{requestitem.text && requestitem.text != ''}}">
+      <button plain="true" bindtap="onPublish" data-prompt="{{requestitem.text}}" data-examples="{{responseitem.text}}">
+        发布
+      </button>
+    </view>
+  </block>
+
+  <view wx:if="{{responseitem.type=='text'}}" class='actions-bar-button'>
+    <button plain="true" bindtap="onNewsCopyText" data-text="{{responseitem.text}}">
+      复制
     </button>
   </view>
-  <block wx:if="{{item.type=='text'}}">
-    <view class='actions-bar-button'>
-      <button plain="true" bindtap="onNewsCopyText" data-text="{{item.text}}">
-        复制
-      </button>
-    </view>
-  </block>
-  <block wx:if="{{item.msg_id > 0}}">
-    <view class='actions-bar-button'>
-      <button plain="true" open-type="share" bindtap="onNewsShareImage" data-msgId="{{item.msg_id}}">
-        分享
-      </button>
-    </view>
-  </block>
+  <view class='actions-bar-button' wx:if="{{responseitem.msg_id > 0}}">
+    <button plain="true" open-type="share" bindtap="onNewsShareImage" data-msgId="{{responseitem.msg_id}}">
+      分享
+    </button>
+  </view>
 </view>
+<create-prompt-dialog show="{{showCreateDialog}}" requestitem="{{requestitem}}" responseitem="{{responseitem}}"></create-prompt-dialog>
