--- a/miniprogram/pkg_prompts/components/prompt-list-item/index.wxml
+++ b/miniprogram/pkg_prompts/components/prompt-list-item/index.wxml
@@ -11,30 +11,25 @@
   <!-- 非推荐 -->
   <block wx:else="{{recommend}}">
     <view class="normal-item">
-      <block wx:if="{{images.length}}">
-        <image class='item-image' lazy-load="{{true}}" src="{{images[0]}}"></image>
-      </block>
-      <block wx:else="{{images.length}}">
-        <bot-avatar size="120" background="#499CFB" rounded="{{false}}"></bot-avatar>
-      </block>
       <view class="item-content" bindtap="onItemTap">
-        <block wx:if="{{title.length}}">
-          <view class="item-title">{{title}}</view>
-        </block>
+        <view wx:if="{{title.length > 0}}" class="item-title">
+          <view class="iconf icon-a-wenQ"></view>
+          <view>{{title}}</view>
+        </view>
         <block wx:if="{{prompts.length}}">
           <view class="item-prompts">{{prompts[0]}}</view>
         </block>
         <block wx:if="{{tags.length}}">
           <view class="item-tags">
-            <view wx:for="{{ tags }}" wx:for-index="tagIndex" wx:for-item="tagItem" wx:key="index" class="item-tag">
-              <image src="/images/tag.svg"></image>
+            <view wx:for="{{ tags }}" wx:for-index="tagIndex" wx:for-item="tagItem" wx:key="index" class="item-tag" wx:if="{{tagIndex < 3}}">
+              <view class="iconf icon-shuqian"></view>
               <text>{{tagItem}}</text>
             </view>
           </view>
         </block>
       </view>
       <view class="item-right">
-        <view class="item-button" bindtap="onTry">试</view>
+        <!-- <view class="item-button" bindtap="onTry">试</view> -->
       </view>
     </view>
   </block>
