--- a/miniprogram/components/prompts-input-painter/index.wxss
+++ b/miniprogram/components/prompts-input-painter/index.wxss
@@ -30,8 +30,8 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: flex-start;
   padding: 8rpx 8rpx;
 }
 
