--- a/miniprogram/components/avatars/bot-avatar/index.wxml
+++ b/miniprogram/components/avatars/bot-avatar/index.wxml
@@ -1,24 +1,18 @@
 <!--components/avatars/bot-avatar/index.wxml-->
 <view class="ai-type-avatar {{rounded? 'rounded':'square'}}" style="height: {{size}}rpx;background-color: {{background}};">
-  <block wx:if="{{ai_type == 'ChatGPT_Text'}}">
+  <block wx:if="{{ai_type == 'replicate'}}">
+    <image src="/images/hj.png" style="width: {{size}}rpx;height: {{size}}rpx;"></image>
+  </block>
+  <block wx:else="">
     <image src="/images/logo.png" style="width: {{size}}rpx;height: {{size}}rpx;"></image>
-  </block>
-  <block wx:if="{{ai_type == 'ChatGPT_Edit_Image'}}">
-    <image src="/images/hj.png" style="width: {{size}}rpx;height: {{size}}rpx;"></image>
-  </block>
-  <block wx:if="{{ai_type == 'ChatGPT_Image'}}">
-    <image src="/images/hj.png" style="width: {{size}}rpx;height: {{size}}rpx;"></image>
   </block>
   <block wx:if="{{withTitle}}">
     <view class="title" style="font-size: {{titleSize}}rpx;line-height: {{size}}rpx;color:{{titleColor}}">
-      <block wx:if="{{ai_type == 'ChatGPT_Text'}}">
-        文本
+      <block wx:if="{{ai_type == 'replicate'}}">
+        AI绘画
       </block>
-      <block wx:if="{{ai_type == 'ChatGPT_Edit_Image'}}">
-        图片
-      </block>
-      <block wx:if="{{ai_type == 'ChatGPT_Image'}}">
-        图片编辑
+      <block wx:else="{{ai_type == 'replicate'}}">
+        AI问答
       </block>
     </view>
   </block>
