--- a/miniprogram/components/empty/index.wxml
+++ b/miniprogram/components/empty/index.wxml
@@ -1,6 +1,6 @@
 <view class="coolui-scroller-empty">
   <view class="coolui-scroller-empty-inner">
-    <image src="{{emptyImg}}" mode="aspectFill" wx:if="{{emptyImg}}" class="empty-img img-class"></image>
+    <view class="empty-img img-class iconf icon-empty-fill"></view>
     <view class="empty-text text-class">{{emptyText}}</view>
     <ad unit-id="adunit-9c64e457097d841f"></ad>
   </view>
