--- a/miniprogram/components/refresh/index.wxml
+++ b/miniprogram/components/refresh/index.wxml
@@ -1,4 +1,4 @@
-<view class="wx-coolui-scroller-refresh refresh-class" style="height:{{config.height}}px;{{config.background.img?'background-image:url('+config.background.img+');':''}}padding-top:{{config.background.height? config.background.height - config.height : 0}}px;">
+<view class="wx-coolui-scroller-refresh refresh-class" style="height:{{config.height}}px;{{config.background.color?'background-color:'+config.background.color+';':''}}padding-top:{{config.background.height? config.background.height - config.height : 0}}px;">
   <view class="refresh-inner" wx:if="{{type == 'base'}}" style="height:{{config.height}}px;color:{{config.text.color}};{{config.text.shadow?'config.text-shadow:0 0 '+config.text.shadow+'rpx '+config.text.color+';':''}}">
     <view class="down  {{triggered && isloading?'loading':''}}" style="transform: rotate({{threshold*180}}deg);">
       <view class="line" style="border-color:{{config.text.color}} transparent transparent;{{triggered && isloading?'background-color:transparent':'background-color:' + config.text.color}}"></view>
