--- a/miniprogram/pkg_prompts/pages/prompt-detail/index.wxml
+++ b/miniprogram/pkg_prompts/pages/prompt-detail/index.wxml
@@ -1,7 +1,7 @@
 <!--pkg_prompts/pages/prompt-detail/index.wxml-->
 <view class="prompt-detail-container">
   <block wx:if="{{prompt == null}}">
-    <empty img-class="empty-img" text-class="empty-text" emptyText="{{emptySetting.text}}" emptyImg="{{emptySetting.img}}" style="background-color: #fff;" />
+    <empty img-class="empty-img" text-class="empty-text" emptyText="{{emptySetting.text}}" style="background-color: #fff;" />
   </block>
   <block wx:else="{{prompt == null}}">
     <view class="top">
@@ -66,11 +66,11 @@
         <view class="detail-examples-item">
           <ai-type-avatar class="item-avatar" size="90" ai_type="{{prompt.ai_type}}"></ai-type-avatar>
           <view class="item-content">
-            <block wx:if="{{prompt.examples.length}}">
-              <text user-select="true">{{prompt.examples}}</text>
+            <block wx:if="{{ prompt.ai_type=='replicate' && examplesObj != null}}">
+              <message-replicate response="{{examplesObj}}"></message-replicate>
             </block>
-            <block wx:else="{{prompt.examples.length}}">
-              <text>没有提供回答示例~</text>
+            <block wx:else="{{prompt.ai_type=='replicate' && examplesObj != null}}">
+              <text user-select="true">{{prompt.examples}}</text>
             </block>
           </view>
         </view>
