--- a/miniprogram/pkg_mine/components/points-card/index.wxml
+++ b/miniprogram/pkg_mine/components/points-card/index.wxml
@@ -1,23 +1,39 @@
 <!--pkg_mine/components/points-card/index.wxml-->
 <view class="reward-summary">
   <view class="reward-points-increased">
-    <view>当前积分:{{points}}</view>
-    <view>今日新增:{{isReward1}}</view>
-    <view>今日使用:{{isReward0}}</view>
+    <view class="reward-buttons-tip">
+      <view class="iconf icon-bangzhu"></view>当前积分
+      <text style="font-size:40rpx;">{{points}}</text>
+    </view>
+    <view class="reward-buttons">
+      <view class="reward-button logs-button" bindtap="onRewardedLogsTap">
+        <view class="iconf icon-jifen"></view>
+        <view class="reward-button-title">积分记录</view>
+      </view>
+    </view>
+    <!-- <view>今日新增:{{isReward1}}</view>
+    <view>今日使用:{{isReward0}}</view> -->
   </view>
   <view class="reward-buttons-container">
     <view class="reward-buttons-tip">
-      <view class="iconf icon-bangzhu"></view>增加次数
+      <view class="iconf icon-bangzhu"></view>增加积分
     </view>
     <view class="reward-buttons">
       <view class="reward-button ad-view-button" bindtap="onRewardedVideoAdTap">
         <view class="iconf icon-yunhang"></view>
+        <view class="reward-button-title">广告</view>
       </view>
-      <button class="reward-button ad-share-button" style="width: 80rpx;padding:0" 	open-type="share">
-        <view class="iconf icon-fenxiang"></view>
-      </button>
+      <view class="reward-button ad-share-button" bindtap="onRewardedVideoAdTap">
+        <view>
+          <button class="iconf icon-fenxiang" open-type="share">
+          </button>
+        </view>
+        <view class="reward-button-title">分享</view>
+      </view>
+
       <view class="reward-button ad-buy-button" bindtap="onBuyButtonTap">
         <view class="iconf icon-zhifu"></view>
+        <view class="reward-button-title">购买</view>
       </view>
     </view>
   </view>
