--- a/miniprogram/components/prompts-input/index.wxss
+++ b/miniprogram/components/prompts-input/index.wxss
@@ -10,6 +10,7 @@
 .container {
   width: 100%;
   display: flex;
+  flex-direction: row;
 }
 
 .input-container {
@@ -24,7 +25,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: flex-start;
   padding: 8rpx 8rpx;
 }
 
@@ -49,12 +50,13 @@
 
 .textarea {
   width: 100%;
-  min-height: 60rpx;
+  /* min-height: 60rpx; */
   text-align: left;
   background-color: #ECECEC;
   color: #474747;
   border-radius: 16rpx;
-  padding: 8rpx 8rpx;
+  font-size: 30rpx;
+  /* padding-top:26rpx; */
 }
 
 .input-placeholder {
