--- a/miniprogram/pkg_mine/components/tools/index.wxml
+++ b/miniprogram/pkg_mine/components/tools/index.wxml
@@ -1,26 +1,26 @@
 <!--pkg_mine/components/tools/index.wxml-->
 <view class="tools-container">
-  <view class="tools-item bg1 vip" bindtap="onItemTap">
+  <view class="tools-item bg2 vip {{vip>=1?'enough':''}}" bindtap="onItemTap" data-enough="{{vip>=1}}" data-opentype="webview" data-url="https://www.idns.link/statics/rrai/canvas/index.html">
     <view class="vip-bg"></view>
-    <view class="vip11">vip11</view>
-    <view class="tools-item-icon iconf icon-xinfeng"></view>
-    <view class="tools-item-title">证件照</view>
-  </view>
-  <view class="tools-item bg2 vip" bindtap="onItemTap">
-    <view class="vip-bg"></view>
-    <view class="vip11">vip11</view>
+    <view class="vip-level">vip1</view>
     <view class="tools-item-icon iconf icon-xinfeng"></view>
     <view class="tools-item-title">小画布</view>
   </view>
-  <view class="tools-item bg3 vip" bindtap="onItemTap">
+  <view class="tools-item bg1 vip {{vip>=11?'enough':''}}" bindtap="onItemTap">
     <view class="vip-bg"></view>
-    <view class="vip11">vip11</view>
+    <view class="vip-level">vip11</view>
+    <view class="tools-item-icon iconf icon-xinfeng"></view>
+    <view class="tools-item-title">证件照</view>
+  </view>
+  <view class="tools-item bg3 vip {{vip>=11?'enough':''}}" bindtap="onItemTap">
+    <view class="vip-bg"></view>
+    <view class="vip-level">vip11</view>
     <view class="tools-item-icon iconf icon-xinfeng"></view>
     <view class="tools-item-title">图片裁剪</view>
   </view>
-  <view class="tools-item bg4 vip" bindtap="onItemTap">
+  <view class="tools-item bg4 vip {{vip>=11?'enough':''}}" bindtap="onItemTap">
     <view class="vip-bg"></view>
-    <view class="vip11">vip11</view>
+    <view class="vip-level">vip11</view>
     <view class="tools-item-icon iconf icon-xinfeng"></view>
     <view class="tools-item-title">黄历</view>
   </view>
