--- a/miniprogram/pkg_mine/pages/unlockvip/index.wxss
+++ b/miniprogram/pkg_mine/pages/unlockvip/index.wxss
@@ -8,6 +8,7 @@ page {
 .container {
   text-align: center;
   display: flex;
+  overflow: hidden;
   flex-direction: column;
   justify-content: center;
   align-items: center;
